# AgnosticAPI

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile-gpu  Dockerfile-gpu6  Dockerfile_exp  Dockerfile_orig  Dockerfile_test  EcoVizAPI_seg3d_joe_contract.docx  README.md  dep1.yaml  pod1.yaml  pyproject.toml  requirements.txt  requirements_orig.txt  seg3Denv.yml  seg3DenvMini.yml  view_mask.ipynb
.ipynb_checkpoints/: view_mask-checkpoint.ipynb
agnosticapi/client/: segmentation_client.py  streamlit_app.py  upload.py
agnosticapi/server/: 15_NRR-ID27468.nii  main.py  main2.py  model_definitions.py  models.py
agnosticapi/server/media/: DALLE_JKB_logo.psd  __init__.py
agnosticapi/server/models/cv_model/: __init__.py  predict.py
agnosticapi/server/models/ls_seg3d_model/: __init__.py  predict.py
agnosticapi/server/models/seg3d_model/: __init__.py  predict.py  predict_old.py  predict_original.py  test_load.py
agnosticapi/tests/: test_cv_model.py  test_seg3d_model.py
app/: graphical.py  graphical_prac.py  ls_seg3d.py  main.py  make_request.py
app/client/: graphical.py  segmentation_client.py  streamlit_app.py
app/ls_seg3d_utils/: AugmentationParameters.py  __init__.py  apply_affine_transform.py  crop_or_pad_to_target.py  generate_random_transform.py  resample.py  resample_single_volume.py  rotation_matrix_from_angle.py
app/server/: main.py  uploaded_file
app/server/models/: joe_download_and_run.py
app/server/models/ls_seg3d_model/: h20230623-163203wh500epochs
app/server/seg3d_backend/: ls_seg3d.py
notebooks/: view_mask.ipynb
(+10 files in other folders)
